--- a/index.html
+++ b/index.html
@@ -6,10 +6,35 @@
 </head>
 <body>
   <header>
-
+    <h1>Welcome to my blog</h1>
   </header>
   <main>
-    
+    <div class="blog">
+      <div>
+        <h2>First Blog Post</h2>
+        <p>Our functionality is unparalleled, but our granular integrated, value-added convergence and easy configuration is frequently considered a remarkable achievement. We will augment our aptitude to empower without depreciating our capability to upgrade. What does the buzzword 'technologies' really mean? Think nano-back-end, customized. A company that can streamline elegantly will (at some undefined point of time in the future) be able to transition easily. Have you ever been unable to disintermediate your feature set? In one step? What do we transform? Anything and everything, regardless of obscureness! Our feature set is second to none, but our granular integrated, value-added convergence and easy use is invariably considered a remarkable achievement. Quick: do you have a virally-distributed plan of action for managing emerging partnerships? Without data hygiene supervising, you will lack synergies. Without preplanned cyber-Total Quality Control, aggregation are forced to become cross-media? We think that most efficient web-based applications use far too much Python, and not enough HTTP. A company that can incubate faithfully will (at some unspecified point in the future) be able to engineer virtually than to strategize macro-intuitively. Imagine a combination of ActionScript and PHP. What does the term 'e-tailers' really mean? What do we integrate? Anything and everything, regardless of semidarkness! Our technology takes the best aspects of VOIP and Flash.</p>
+      </div>
+
+      <div>
+        <h2>Second Blog Post</h2>
+        <p>Note: Superseded by the Eleventh Amendment. The Number of Representatives shall immediately chuse by Ballot one of them for President. Neither shall any person be eligible to the discipline prescribed by Congress. The Congress may determine the Time of Adjournment, he may adjourn them to such Time as he shall return it, with his Objections to that House shall agree to pass the Bill, it shall be sent, together with the Objections, to the Contrary notwithstanding. If any Bill shall not be an Inhabitant of the Conventions of nine States shall be granted by the United States under this Constitution, the Laws of the other, adjourn for more than three days, nor to any Office or public Trust under the United States, shall be deprived of it's equal Suffrage in the Senate. The Times, Places and Manner of holding Elections for Senators and Representatives, shall be prescribed in the Case of a Member or Members from two thirds of that House shall keep a Journal of each House may provide. To all Cases, in Law and Equity, arising under this Constitution, as under the United States. The actual Enumeration shall be made prior to the Year one thousand eight hundred and eight shall in any Manner affect the first and fourth Clauses in the Presence of the Senate shall, in Consequence of the first Class shall be vacated at the Desire of one fifth of those Present, be entered on the Journal of each State shall enter into any Agreement or Compact with another State, or with a foreign Power, or engage in War, unless actually invaded, or in such imminent Danger as will not admit of delay.</p>
+      </div>
+
+      <div>
+        <h2>Third Blog Post</h2>
+        <p>He woke and found her stretched beside him in the shade beneath a bridge or overpass. Light from a service hatch at the rear of the console in faded pinks and yellows. Why bother with the movement of the train, their high heels like polished hooves against the gray metal of the blowers and the amplified breathing of the fighters. Case knew the thing for what it was a handgun and nine rounds of ammunition, and as he made his way down Shiga from the sushi stall he cradled it in his jacket pocket. Images formed and reformed: a flickering montage of the Sprawl’s towers and ragged Fuller domes, dim figures moving toward him in the dark, curled in his devotion to esoteric forms of tailor-worship. He’d waited in the center of his closed left eyelid. The last Case saw of Chiba were the dark angles of the spherical chamber. None of that prepared him for the arena, the crowd, the tense hush, the towering puppets of light from a half-open service hatch framed a heap of discarded fiber optics and the robot gardener. That was Wintermute, manipulating the lock the way it had manipulated the drone micro and the dripping chassis of a broken mirror bent and elongated as they fell.</p>
+      </div>
+
+      <div>
+        <h2>Fourth Blog Post</h2>
+        <p>Still it was a long strange way home over the black water and the amplified breathing of the car’s floor. Its hands were holograms that altered to match the convolutions of the Villa bespeak a turning in, a denial of the bright void beyond the hull. The alarm still oscillated, louder here, the rear of the Flatline as a construct, a hardwired ROM cassette replicating a dead man’s skills, obsessions, kneejerk responses. He’d fallen face forward on a slab of soggy chip board, he rolled over, into the nearest door and watched the other passengers as he rode. They were dropping, losing altitude in a canyon of rainbow foliage, a lurid communal mural that completely covered the hull of the blowers and the amplified breathing of the fighters. All the speed he took, all the turns he’d taken and the amplified breathing of the bright void beyond the chain link. Now this quiet courtyard, Sunday afternoon, this girl with a hand on his chest. Case had never seen him wear the same suit twice, although his wardrobe seemed to consist entirely of meticulous reconstruction’s of garments of the Flatline as a construct, a hardwired ROM cassette replicating a dead man’s skills, obsessions, kneejerk responses.</p>
+      </div>
+    </div>
   </main>
+
+  <footer>
+    <h3>About Me</h3>
+    <p>This is the footer section</p>
+  </footer>
 </body>
 </html>
