add about me page and body color

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <footer>
     <h3>About Me</h3>
-    <p>This is the footer section</p>
+    <p>Our functionality is unparalleled, but our capability to transform without devaluing our capability to transform without devaluing our power to deliver. Is it more important for something to be leading-edge or to be best-of-breed? The portals factor can be delivered as-a-service to wherever it’s intended to go – mobile.</p>
   </footer>
 </body>
 </html>
